workloads/kube-burner/workloads/large-networkpolicy-egress/networkpolicy-essential-ports.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: large-networkpolicy-egress-perfscale-testing-essential-ports
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.128.0.0/16
  - from:
    - ipBlock:
        cidr: 172.30.0.0/16
  egress:
  - to:
    - ipBlock:
        cidr: 10.128.0.0/14
    - ipBlock:
        cidr: 172.30.0.0/16
    - ipBlock:
        cidr: 8.8.8.8/32
    - ipBlock:
        cidr: 8.8.8.4/32
    - ipBlock:
        cidr: 142.0.0.0/8
    - ipBlock:
        cidr: 104.18.0.0/16       
    ports:
    - port: 80
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 5432
      protocol: TCP
    - port: 6443
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 50000
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
